--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ html {
 }
 .place-item {
   float: left;
-  width: 33.333333%;
+  width: calc(33.333% - 16px);
   padding: 0 8px;
 }
 .place-img {
@@ -234,4 +234,104 @@ html {
   background-color: #ccc;
 }
 #footer {
+}
+.modal {
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  top: 0;
+}
+.modal {
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+.modal.open {
+  display: flex;
+}
+.modal-container {
+  background: #fff;
+  width: 900px;
+  max-width: calc(100% - 32px);
+  min-height: 200px;
+  position: relative;
+  animation: modalFadeIn ease 0.5s;
+}
+header.modal-header {
+  background: #009688;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #fff;
+}
+.modal-heading-icon {
+  margin-right: 16px;
+}
+.modal-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: white;
+  padding: 12px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+.modal-close:hover {
+  opacity: 1;
+}
+.modal-boby {
+  padding: 16px;
+}
+label.modal-label {
+  display: block;
+  font-size: 15px;
+  padding: 8px;
+  margin-bottom: 12px;
+}
+.modal-input {
+  border: 1px solid #ccc;
+  padding: 10px;
+  font-size: 16px;
+  width: calc(100% - 16px);
+  margin-bottom: 24px;
+}
+button#Pay-ticket:hover {
+  opacity: 0.8;
+}
+
+button#Pay-ticket {
+  background: #009688;
+  border: none;
+  color: white;
+  width: 100%;
+  font-size: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 18px;
+}
+.modal-footer {
+  padding: 16px;
+  text-align: right;
+}
+.modal-footer a {
+  color: #2196f3;
+}
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
